--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ default_language_version:
   python: python3
 repos:
   - repo: https://github.com/lorenzwalthert/precommit
-    rev: v0.3.2.9019
+    rev: v0.4.0
     hooks:
       - id: style-files
         name: Style code with `styler`
@@ -15,26 +15,37 @@ repos:
       - id: roxygenize
         name: Regenerate package documentation
         additional_dependencies:
-          - checkmate
-          - digest
-          - dplyr
+          - ggmosaic
           - ggplot2
-          - glue
-          - grDevices
-          - lifecycle
+          - shiny
+          - shinyTree
+          - insightsengineering/teal
+          - checkmate
+          - dplyr
+          - DT
+          - forcats
+          - grid
           - logger
           - magrittr
-          - methods
-          - bioc::MultiAssayExperiment
-          - R6
-          - rlang
-          - rtables
+          - scales
           - shinyjs
+          - shinyvalidate
           - shinyWidgets
           - stats
-          - bioc::SummarizedExperiment
+          - stringr
+          - insightsengineering/teal.code
+          - insightsengineering/teal.data
+          - insightsengineering/teal.logger
+          - insightsengineering/teal.reporter
+          - insightsengineering/teal.slice
+          - insightsengineering/teal.transform
+          - insightsengineering/teal.widgets
+          - tern
+          - tibble
+          - tidyr
+          - tidyselect
           - utils
-          - yaml
+
       - id: spell-check
         name: Check spelling with `spelling`
         exclude: >
@@ -52,9 +63,9 @@ repos:
           .*\.sh|
           .*\.svg|
           .*\.xml|
-          (.*/|)\_pkgdown.y[a]ml|
+          (.*/|)\_pkgdown.y[a]?ml|
           (.*/|)\.gitignore|
-          (.*/|)\.gitlab-ci\.yml|
+          (.*/|)\.gitlab-ci\.y[a]?ml|
           (.*/|)\.lintr|
           (.*/|)\.pre-commit-.*|
           (.*/|)\.Rbuildignore|
@@ -64,8 +75,8 @@ repos:
           (.*/|)DESCRIPTION|
           (.*/|)LICENSE|
           (.*/|)NAMESPACE|
-          (.*/|)staged_dependencies\.yaml|
+          (.*/|)staged_dependencies\.y[a]?ml|
           (.*/|)WORDLIST|
-          \.github/.*\.yaml|
+          \.github/.*\.y[a]?ml|
           data/.*
           )$
